--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+body{
+ box-sizing: border-box;
+}
 .container {
   display: flex;
   flex-direction: column;
   gap: 3px;
   align-items: center;
   color: black;
+  width: 100%;
 }
 
 .header {
@@ -11,42 +15,56 @@
   border: 2px solid #000;
   display: flex;
   justify-content: space-between;
-  flex: 1 1 50px;
+  /* flex: 1 1 50px; */
   padding-left: 5%;
+  padding-right: 5%;
 }
 
-header h1{
+/* header h1{
  width: 20%;
-}
+} */
 
 nav{
  display: flex;
- justify-content: space-between;
- 
- width: 30%;
+ width: 50%;
  max-width: 60%;
  align-items: center;
+ justify-content: flex-end;
 }
 
 nav ul{
  width: 100%;
  list-style-type: none;
  display: flex;
- justify-content: space-between;
-}
 
-nav ul li:last-child{
- margin-right: 15%;
-}
-
-nav ul > li:not(:last-child){
- border-right: 3px solid black;
- padding-right: 20px;
+ justify-content: flex-end;
 }
 
 nav ul li{
+ display: flex;
+ justify-content: center;
  font-size: 24px;
  font-weight: 500;
+
+ flex: 1 2 0;
+ justify-self: center;
+}
+
+nav ul #nav-add{
+ flex-grow: 2;
+ flex-shrink: 1;
+}
+
+nav ul li:last-child{
+ justify-content: flex-end;
+  padding-left: 3%;
+
+}
+
+nav ul li:not(:last-child){
+ /* padding-right: 8%; */
+ justify-self: center;
+
 }
 
 nav ul li a{
@@ -54,38 +72,52 @@ nav ul li a{
  text-decoration: none;
 }
 
+nav ul li a:active,
 nav ul li a:hover{
- color: aqua;
+ color: rgb(181, 226, 226);
 }
 
 main {
-  width: 90%;
+  width: 100%;
+  padding: 1% 5%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 15px;
-  padding: 10px;
   height: auto;
   font-size: 18px;
   font-weight: 600;
-}
+} 
 
 .time {
+ display: flex;
+ justify-content: flex-end;
  justify-self: flex-end;
+ margin-right: 2%;
+ margin-bottom: 3%;
 }
 
-.form-container,
-.contact-info {
-  display: none;
-  flex-direction: column;
+.form-container{
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
 }
-
 
 form {
   display: flex;
+  width: 15%;
   flex-direction: column;
+  align-items: center;
+  align-self: center;
   height: auto;
-  gap: 15px;  
+  gap: 10%;  
+}
+
+input[type="text"]{
+ height: 30px;
+}
+
+#submit-btn{
+ padding: 10px 40px;
+ font-size: 18px;
 }
 
 form .style-me {
@@ -122,4 +154,4 @@ table tr {
 
 #books-list tbody:nth-child(even) {
 	 background-color: rgb(152, 156, 152); 
-	}
+	} 
