--- a/style.css
+++ b/style.css
@@ -2,27 +2,22 @@ body{
  box-sizing: border-box;
 }
 .container {
-  display: flex;
-  flex-direction: column;
-  gap: 3px;
-  align-items: center;
-  color: black;
-  width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 3px;
+	align-items: center;
+	color: black;
+	width: 100%;
 }
 
 .header {
-  width: 90%;
-  border: 2px solid #000;
-  display: flex;
-  justify-content: space-between;
-  /* flex: 1 1 50px; */
-  padding-left: 5%;
-  padding-right: 5%;
+	width: 90%;
+	border: 2px solid #000;
+	display: flex;
+	justify-content: space-between;	
+	padding-left: 5%;
+	padding-right: 5%;
 }
-
-/* header h1{
- width: 20%;
-} */
 
 nav{
  display: flex;
@@ -45,7 +40,6 @@ nav ul li{
  justify-content: center;
  font-size: 24px;
  font-weight: 500;
-
  flex: 1 2 0;
  justify-self: center;
 }
@@ -57,14 +51,12 @@ nav ul #nav-add{
 
 nav ul li:last-child{
  justify-content: flex-end;
-  padding-left: 3%;
+	padding-left: 3%;
 
 }
 
-nav ul li:not(:last-child){
- /* padding-right: 8%; */
+nav ul li:not(:last-child){ 
  justify-self: center;
-
 }
 
 nav ul li a{
@@ -78,41 +70,48 @@ nav ul li a:hover{
 }
 
 main {
-  width: 100%;
-  padding: 1% 5%;
-  display: flex;
-  flex-direction: column;
-  height: auto;
-  font-size: 18px;
-  font-weight: 600;
+	width: 100%;
+	padding: 1% 5%;
+	display: flex;
+	flex-direction: column;
+	height: auto;
+	font-size: 18px;
+	font-weight: 600;
 } 
 
-.time {
+#date-time {
  display: flex;
  justify-content: flex-end;
  justify-self: flex-end;
  margin-right: 2%;
  margin-bottom: 3%;
+ font-size: small;
+}
+
+.list-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .form-container{
  display: flex;
  flex-direction: column;
- justify-content: center;
+ align-items: center;
 }
 
 form {
-  display: flex;
-  width: 15%;
-  flex-direction: column;
-  align-items: center;
-  align-self: center;
-  height: auto;
-  gap: 10%;  
+	display: flex;
+	width: 15%;
+	flex-direction: column;
+	align-items: center;
+	align-self: center;
+	height: auto;
+	gap: 10%;  
 }
 
 input[type="text"]{
- height: 30px;
+	height: 30px;
 }
 
 #submit-btn{
@@ -121,37 +120,44 @@ input[type="text"]{
 }
 
 form .style-me {
-  height: 5px;
-  width: 50%;
-  justify-self: center;
-  align-self: center;
-  background-color: #000;
-  border-radius: 100px;
-  margin-bottom: 30px;
+	height: 5px;
+	width: 50%;
+	justify-self: center;
+	align-self: center;
+	background-color: #000;
+	border-radius: 100px;
+	margin-bottom: 30px;
 }
 
 .btn-col {
-  border: 5px solid black;
+	border: 5px solid black;
 }
 
 table {
-  border: 3px solid #000;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  height: auto;
-  width: 90%;
-  padding: 5%;
+	border: 3px solid #000;
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+	height: auto;
+	width: 90%;
+	padding: 5%;
 }
 
 table tr {
-  display: flex;
-  height: auto;
-  align-items: center;
-  padding: 1px;
-  justify-content: space-between;
+	display: flex;
+	height: auto;
+	align-items: center;
+	padding: 1px;
+	justify-content: space-between;
 }
 
 #books-list tbody:nth-child(even) {
 	 background-color: rgb(152, 156, 152); 
-	} 
+} 
+
+.contact-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;	
+}
