--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .header {
   width: 90%;
-  border: 2px solid #000;
+  border: 4px solid #000;
   display: flex;
   justify-content: space-between;
   padding-left: 5%;
@@ -146,12 +146,12 @@ form .style-me {
 }
 
 table {
-  border: 3px solid #000;
+  border: 4px solid #000;
   display: flex;
   flex-direction: column;
   gap: 15px;
   height: auto;
-  width: 90%;
+  width: 100%;
   padding: 5%;
 }
 
@@ -174,4 +174,16 @@ table tr {
   align-items: center;
   gap: 5px;
   font-size: larger;
+}
+
+footer {
+  border: 4px solid black;
+  width: 100%;
+}
+
+footer p {
+  float: left;
+  margin-left: 20px;
+  font-size: larger;
+  font-weight: 600;
 }
